Fix the upload box.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,12 @@
 
 <div class="container">
     <h1>CSV Parser files</h1>
+
     <h3>Upload the csv file that you would like to process and filter the data</h3>
 
-    <div id="fileuploader">Upload</div>
+    <div style="padding-top: 20px">
+        <div id="fileuploader">Upload</div>
+    </div>
 
     <div id="report_area">
         <table id="myTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
